--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </button>
 
         <div class="logo header__logo">
-          <a class="logo__link">
+          <a class="logo__link" href="#">
             <img class="logo__img" src="img/logo.svg" alt="Blanchard-lоgo">
           </a>
         </div>
@@ -1237,7 +1237,7 @@
   <footer class="footer">
     <div class="footer__container container flex">
       <div class="logo footer__logo">
-        <a class="logo__link">
+        <a class="logo__link" href="#">
           <img class="logo__img" src="img/logo.svg" alt="Blanchard-lоgo">
         </a>
       </div>
@@ -1267,6 +1267,7 @@
       </ul>
     </div>
   </footer>
+  <div class="overlay"></div>
 
   <script src="js/accordion.min.js"></script>
   <script src="js/choices.min.js"></script>
